# check-pre-commit-config

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  Makefile  README.md  bump.sh  check_pre_commit_config_frozen.py  pyproject.toml
.github/: dependabot.yml  release.yml
.github/actions/setup/: action.yml
.github/workflows/: release.yml  tests.yaml
tests/: __init__.py  test_general.py  test_git.py  test_linter.py  test_pre_commit.py
