[build-system]
requires      = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "check-pre-commit-config-frozen"
version = "0.1.0"
description = "Ensure correct `frozen: x.x.x` comments in `pre-commit-config.yaml`"
authors = ["yfprojects <real-yfprojects@users.noreply.github.com>"]
license = "MIT"
repository = "http://github.com/real-yfprojects/check-pre-commit-config-frozen"
keywords = ["pre-commit", "linter", "development"]
classifiers = [
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Quality Assurance',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
readme = "README.md"

[tool.poetry.dependencies]
python      = ">=3.7"                                      # doesn't conform to semver
ruamel-yaml = ">=0.17.26"                                  # doesn't conform to semver
rich        = { version = "^13.3.5", extras = ["colour"] }

[tool.poetry.scripts]
check-pre-commit-config-frozen = "check_pre_commit_config_frozen:main"


[tool.poetry.group.lint.dependencies]
mypy  = "^1.3.0"
ruff  = "^0.0.269"
black = "^23.3.0"

[tool.black]
target-version = ['py37']

[tool.ruff]
# Enable flake8-print, isort, pyflakes, pydocstyle, pycodestyle, flynt, ruff
select  = ["T", "I", "F", "D", "E", "W", "FLY", "RUF", "PL"]
fixable = ["I"]

ignore = ["D202", "D203", "D205", "D401", "D212", "E501"]

# Same as Black.
line-length = 88

# Assume Python 3.10.
target-version = "py37"

# Allow unused variables when underscore-prefixed or of form `dummyN`.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?)|dummy\\d*)$"
